Set base URL in GHA test CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,6 +50,11 @@ jobs:
     name: Acceptance Tests
     needs: build
     runs-on: ubuntu-latest
+    services:
+      backstage:
+        image: roadiehq/community-backstage-image
+        ports:
+          - 7000
     timeout-minutes: 15
     strategy:
       fail-fast: false
@@ -72,5 +77,12 @@ jobs:
       - run: go mod download
       - env:
           TF_ACC: "1"
+          ACCTEST_SKIP_RESOURCE_LOCATION: "1"
+          BACKSTAGE_BASE_URL: "https://demo.backstage.io"
         run: go test -v -cover ./backstage
+        timeout-minutes: 10
+      - env:
+          TF_ACC: "1"
+          BACKSTAGE_BASE_URL: "http://localhost:${{ job.services.backstage.ports[7000] }}"
+        run: go test -v -cover ./backstage/resource_location_test.go
         timeout-minutes: 10
