Fix codecov filenames

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -96,7 +96,5 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: |
-            ./coverage1.out
-            ./coverage2.out
+          files: ./coverage1.out,./coverage2.out
           verbose: true
