chore(dependabot): update configuration and add terraform ecosystem
- Add commit message configuration for existing ecosystems
- Include new terraform ecosystem for /examples directory
- Set consistent commit message prefixes and scopes across all ecosystems

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,23 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: chore
+      prefix-development: chore
+      include: scope
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: chore
+      prefix-development: chore
+      include: scope
+  - package-ecosystem: "terraform"
+    directory: "/examples"
+    schedule:
+      interval: "daily"
+    commit-message:
+      prefix: chore
+      prefix-development: chore
+      include: scope
